objects/Web_Call_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Log_Callout_Response_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This identifies if for a callout we are logging the call out response time.</description>
        <label>Log Callout Response Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAuthVersion__c</fullName>
        <label>OAuthVersion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Template__c</fullName>
        <label>Request Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TempId__c</fullName>
        <externalId>true</externalId>
        <label>TempId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OAuthVersion__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OAuth_Version</fullName>
        <columns>NAME</columns>
        <columns>OAuthVersion__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Request_Template__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>OAuth Version</label>
        <language>en_US</language>
    </listViews>
</CustomObject>